changed width for checkboxes to fix layout problem with Chrome

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -105,8 +105,8 @@ a.button {border: 1px solid #0081C7; width: 98%; padding: 4px; text-decoration:n
 a.button:hover {background:#eeeeee;}
 a.button:focus {border: 2px solid #006095;}
 input { width: 98%; padding: 4px; font-size:medium;}
+input[type="checkbox"] { width: 1.5em; }
 input.submit { width:30%;margin-top:5px;  }
-input.checkbox {width:auto;}
 input:focus {border: 2px solid #006095;}
 textarea {border: 1px solid #0081C7; width:98%; padding: 4px; font-size:medium;}
 textarea:focus {border: 2px solid #006095;}
